--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/CandidateManagement
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/CandidateManagement?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=harish
 spring.datasource.password=sundar
 
